# ris

./: Cargo.toml  LICENSE-APACHE-2.0  LICENSE-MIT  README.md
benches/: lis_bench.rs
src/: diff.rs  lib.rs
tests/: tests.rs
